--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,7 @@
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-devkit/build-angular:vitest",
           "options": {
             "polyfills": [
               "zone.js",
