--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,8 +5,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [
-      "node",
-      "vitest/globals"
+      "node"
     ]
   },
   "files": [
