--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.18",
-    "@angular/cdk": "^18.2.8",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.2.18",
     "@angular/compiler": "^19.2.18",
     "@angular/core": "^19.2.18",
     "@angular/forms": "^19.2.18",
-    "@angular/material": "^18.2.8",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.2.18",
     "@angular/platform-browser-dynamic": "^19.2.18",
-    "@angular/platform-server": "^19.2.18",
+    "@angular/platform-server": "^20.3.16",
     "@angular/router": "^19.2.18",
-    "@angular/ssr": "^19.2.19",
+    "@angular/ssr": "^20.3.14",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,10 +31,12 @@
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "^2.2.1",
     "@angular-devkit/build-angular": "^19.2.19",
+    "@angular-devkit/core": "^19.2.19",
+    "@angular-devkit/schematics": "^19.2.19",
     "@angular/cli": "^19.2.19",
-    "@angular/compiler-cli": "^19.2.18",
+    "@angular/compiler-cli": "^20.3.16",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.9.3"
   }
 }
