--- a/angular.json
+++ b/angular.json
@@ -82,8 +82,9 @@
           "builder": "@angular-devkit/build-angular:extract-i18n"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:vitest",
+          "builder": "@analogjs/vitest-angular:test",
           "options": {
+            "vitestConfig": "vitest.config.ts",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
