--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.16",
-    "@angular/cdk": "^20.2.14",
-    "@angular/common": "^20.3.16",
-    "@angular/compiler": "^20.3.16",
-    "@angular/core": "^20.3.16",
-    "@angular/forms": "^20.3.16",
-    "@angular/material": "^20.2.14",
-    "@angular/platform-browser": "^20.3.16",
-    "@angular/platform-browser-dynamic": "^20.3.16",
-    "@angular/platform-server": "^20.3.16",
-    "@angular/router": "^20.3.16",
-    "@angular/ssr": "^20.3.14",
+    "@angular/animations": "^21.0.8",
+    "@angular/cdk": "^21.0.6",
+    "@angular/common": "^21.0.8",
+    "@angular/compiler": "^21.0.8",
+    "@angular/core": "^21.0.8",
+    "@angular/forms": "^21.0.8",
+    "@angular/material": "^21.0.6",
+    "@angular/platform-browser": "^21.0.8",
+    "@angular/platform-browser-dynamic": "^21.0.8",
+    "@angular/platform-server": "^21.0.8",
+    "@angular/router": "^21.0.8",
+    "@angular/ssr": "^21.0.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,13 +30,17 @@
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "^2.2.1",
-    "@angular-devkit/build-angular": "^20.3.14",
-    "@angular-devkit/core": "^20.3.14",
-    "@angular-devkit/schematics": "^20.3.14",
-    "@angular/cli": "^20.3.14",
-    "@angular/compiler-cli": "^20.3.16",
+    "@analogjs/vitest-angular": "^2.2.1",
+    "@angular-devkit/build-angular": "^21.0.5",
+    "@angular-devkit/core": "^21.0.5",
+    "@angular-devkit/schematics": "^21.0.5",
+    "@angular/cli": "^21.0.5",
+    "@angular/compiler-cli": "^21.0.8",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.18.0",
-    "typescript": "~5.9.3"
+    "@types/node": "^25.0.6",
+    "@vitest/ui": "^4.0.17",
+    "jsdom": "^27.4.0",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.17"
   }
 }
