--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "vixo-library-ui": "git+ssh://git@github.com:v1x0/library-components-angular.git",
     "@angular/animations": "^21.0.8",
     "@angular/cdk": "^21.0.6",
     "@angular/common": "^21.0.8",
